# hotels_reserve_fastapi

./: .env.example  .env_test  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  dependencies.py  docker-compose.yml  hotels.py  main.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt
src/: config.py  database.py  exceptions.py  main.py
src/api/: auth.py  bookings.py  dependencies.py  facilities.py  hotels.py  images.py  rooms.py
src/connectors/: redis_connector.py
src/migrations/: env.py
src/migrations/versions/: 08c3e3073b81_initial_migration.py  2025_06_16_2118-388bd08685b9_create_hotel_model.py  2025_06_16_2118-881d268bf441_create_room_model.py  2025_07_28_1926-d9b60badc628_unique_user_email.py  2025_08_04_2315-3b23867ddd7f_bookings_model_create.py  2025_08_12_0028-40506467b729_facilities_models_create.py  2025_09_03_1219-44447fdaf7cb_unique_hotels_data.py  2025_09_03_1448-55d8bc1c9cc3_unique_data.py  83d3834da652_create_room_model.py  a02b62f935d3_initial_migration.py  d84db7d67bdd_initial_migration.py
src/models/: __init__.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/repositories/: base.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py  utils.py
src/repositories/mappers/: base.py  mappers.py
src/schemas/: booking.py  facilities.py  hotels.py  rooms.py  users.py
src/services/: auth.py  base.py  bookings.py  facilities.py  hotels.py  images.py  rooms.py
src/tasks/: celery_app.py  tasks.py
src/utils/: db_manager.py  validation.py
tests/: conftest.py
tests/fixtures/: mock_rooms.json
tests/integration_tests/: test_auth.py
tests/integration_tests/auth/: test_api.py
tests/integration_tests/bookings/: test_api.py  test_db.py
tests/integration_tests/facilities/: test_api.py
tests/integration_tests/hotels/: test_api.py  test_db.py
tests/integration_tests/rooms/: test_api.py
tests/unit_tests/: test_auth.py
